--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# 1) 依存インストール
+# 1) 根本証明書をコピー
+COPY DigiCertGlobalRootCA.crt.pem /usr/local/share/ca-certificates/
+RUN update-ca-certificates
+
+# 2) 依存インストール
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 2) アプリ本体
+# 3) アプリ本体
 COPY app ./app
 
 # CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
