--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           context: ./frontend
           push: true
           tags: ${{ env.REGISTRY }}/pos-frontend:${{ env.IMAGE_TAG }}
+          no-cache: true
 
       - name: Export tag
         run: echo "IMAGE_TAG=${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
