--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,2 +1,2 @@
 FRONTEND_ORIGIN=https://pos-frontend.ashystone-fb341e56.japaneast.azurecontainerapps.io
-DATABASE_URL=mysql+pymysql://adminuser:Limit500?@posmysqlserver-sea.mysql.database.azure.com:3306/pos_db?ssl_mode=require
+DATABASE_URL=mysql+pymysql://adminuser:Limit500?@posmysqlserver-sea.mysql.database.azure.com:3306/pos_app_db?ssl_ca=/usr/local/share/ca-certificates/digicert.pem&ssl_verify_cert=true
