--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,1 +1,11 @@
 FRONTEND_ORIGIN=http://localhost:3000
+
+# ---------- Database ----------
+DB_USER=root
+DB_PASSWORD=limit500?
+DB_HOST=db      # ここはdocker-compose上のMySQLサービス名「db」
+DB_PORT=3306
+DB_NAME=pos_app_db
+
+# ---------- JWT / その他 ----------
+JWT_SECRET=devsecret_change_me
