--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           context: ./frontend
           push: true
           tags: ${{ env.REGISTRY }}/pos-frontend:${{ env.IMAGE_TAG }}
-          build-args: ENV_FILE=.env.development
+          build-args: ENV_FILE=.env.production
           no-cache: true
 
       - name: Export tag
