--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: pos-db
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: limit500?        # 開発用
+      MYSQL_ROOT_PASSWORD: limit500?       
       MYSQL_DATABASE: pos_app_db
     ports:
       - "3307:3306"                        # ホスト→コンテナ
@@ -22,7 +22,7 @@ services:
     container_name: pos-backend
     restart: unless-stopped
     env_file:
-      - ./backend/.env.development
+      - ./backend/.env.production
     depends_on:
       - db
     ports:
@@ -32,10 +32,12 @@ services:
   frontend:
     build:
       context: ./frontend                  # frontend/Dockerfile
+      args:
+        ENV_FILE: .env.production          # ← build-argsで本番用を指定
     container_name: pos-frontend
     restart: unless-stopped
     env_file:
-      - ./frontend/.env.development
+      - ./frontend/.env.production
     depends_on:
       - backend
     ports:
