--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
-    "@types/react": "^19.1.6"
+    "@types/react": "^19.1.6",
+    "typescript": "^5.4.5",
+    "@types/react-dom": "^19.1.6"
   }
 }
