--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,6 +1,7 @@
 FRONTEND_ORIGIN=http://localhost:3000
 
 # ---------- Database ----------
+# `DATABASE_URL` を設定した場合はこちらが優先されます
 DB_USER=root
 DB_PASSWORD=limit500?
 DB_HOST=db      # ここはdocker-compose上のMySQLサービス名「db」
