Add CA certificate and update DATABASE_URL for SSL

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,3 +1,3 @@
 FRONTEND_ORIGIN=https://pos-frontend.ashystone-fb341e56.japaneast.azurecontainerapps.io
 # この値を設定すると DB_* 系の変数よりも優先されます
-DATABASE_URL=mysql+pymysql://adminuser:limit500?@posmysqlserver-sea.mysql.database.azure.com:3306/pos_app_db?ssl_ca=/usr/local/share/ca-certificates/digicert.pem&ssl_verify_cert=true
+DATABASE_URL=mysql+pymysql://adminuser:limit500%3F@posmysqlserver-sea.mysql.database.azure.com:3306/pos_app_db?ssl_ca=/usr/local/share/ca-certificates/digicert.pem&ssl_verify_cert=true
