init_data, main.py add dotenv

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,3 +1,4 @@
+#backend/.env.production
 FRONTEND_ORIGIN=https://pos-frontend.ashystone-fb341e56.japaneast.azurecontainerapps.io
 # この値を設定すると DB_* 系の変数よりも優先されます
 DATABASE_URL=mysql+pymysql://adminuser:limit500%3F@posmysqlserver-sea.mysql.database.azure.com:3306/pos_app_db?ssl_ca=/etc/ssl/certs/DigiCert_Global_Root_CA.pem&ssl_verify_cert=true
