--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,17 @@ jobs:
           tags: ${{ env.REGISTRY }}/pos-backend:${{ env.IMAGE_TAG }}
           no-cache: true          # ← 1 回だけ付ける
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: pip install -r backend/requirements.txt
+
+      - name: Run tests
+        run: pytest backend/tests -q
+
       - name: Build & push frontend
         uses: docker/build-push-action@v5
         with:
