--- a/backend/.env.development
+++ b/backend/.env.development
@@ -3,7 +3,7 @@ FRONTEND_ORIGIN=http://localhost:3000
 # ---------- Database ----------
 # `DATABASE_URL` を設定した場合はこちらが優先されます
 DB_USER=root
-DB_PASSWORD=limit500?
+DB_PASSWORD=limit500%3F
 DB_HOST=db      # ここはdocker-compose上のMySQLサービス名「db」
 DB_PORT=3306
 DB_NAME=pos_app_db
