--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     container_name: pos-backend
     restart: unless-stopped
     env_file:
-      - ./backend/.env.production
+      - ./backend/${ENV_FILE:-.env.development}
     depends_on:
       - db
     ports:
@@ -33,11 +33,11 @@ services:
     build:
       context: ./frontend                  # frontend/Dockerfile
       args:
-        ENV_FILE: .env.production          # ← build-argsで本番用を指定
+        ENV_FILE: ${ENV_FILE:-.env.development}  # ← build-argsで切替可能
     container_name: pos-frontend
     restart: unless-stopped
     env_file:
-      - ./frontend/.env.production
+      - ./frontend/${ENV_FILE:-.env.development}
     depends_on:
       - backend
     ports:
