--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,12 +1,16 @@
+# backend/env.development
 FRONTEND_ORIGIN=http://localhost:3000
 
 # ---------- Database ----------
 # `DATABASE_URL` を設定した場合はこちらが優先されます
 DB_USER=root
-DB_PASSWORD=limit500%3F 
+DB_PASSWORD=limit500?
 DB_HOST=db      # ここはdocker-compose上のMySQLサービス名「db」
 DB_PORT=3306
 DB_NAME=pos_app_db
+DATABASE_URL=mysql+pymysql://root:limit500?@db:3306/pos_app_db
 
 # ---------- JWT / その他 ----------
 JWT_SECRET=devsecret_change_me
+
+
