--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,4 +1,23 @@
-#backend/.env.production
+# backend/.env.production - Azure Container Apps Configuration
+
+# CORS Configuration
 FRONTEND_ORIGIN=https://pos-frontend.ashystone-fb341e56.japaneast.azurecontainerapps.io
-# この値を設定すると DB_* 系の変数よりも優先されます
-DATABASE_URL=mysql+pymysql://adminuser:limit500%3F@posmysqlserver-sea.mysql.database.azure.com:3306/pos_app_db?ssl_ca=/etc/ssl/certs/digicert.pem&ssl_verify_cert=true
+
+# Azure MySQL Database Configuration - Confirmed from Azure Portal
+# Server: posmysqlserver-sea.mysql.database.azure.com
+# Administrator login: adminuser (exact format from portal)  
+# Password: limit500?
+# SSL: required
+
+# Option 1: Using DATABASE_URL with URL-encoded password (? = %3F) - DISABLED for testing
+# DATABASE_URL=mysql+pymysql://adminuser:limit500%3F@posmysqlserver-sea.mysql.database.azure.com:3306/pos_app_db?ssl_ca=/etc/ssl/certs/digicert.pem&ssl_verify_cert=true
+
+# Option 2: Individual DB variables (exact credentials from Azure Portal)
+DB_USER=adminuser
+DB_PASSWORD=limit500?
+DB_HOST=posmysqlserver-sea.mysql.database.azure.com
+DB_PORT=3306
+DB_NAME=pos_app_db
+
+# Environment
+ENV=production
