--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,40 @@
-# backend/Dockerfile
+# backend/Dockerfile - Azure Container Apps Optimized
 FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
-# CA証明書は追加済み
-# COPY ./certs/digicert.pem /usr/local/share/ca-certificates/digicert.pem
-# RUN chmod 644 /usr/local/share/ca-certificates/digicert.pem \
-    # && update-ca-certificates
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy SSL certificate for Azure MySQL
 COPY ./certs/digicert.pem /etc/ssl/certs/digicert.pem
+RUN chmod 644 /etc/ssl/certs/digicert.pem
 
-# 2) 依存インストール
+# Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
 
-# 3) アプリ本体
+# Copy application code
 COPY app ./app
 
-# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Create non-root user for security
+RUN adduser --disabled-password --gecos '' appuser \
+    && chown -R appuser:appuser /app
+USER appuser
 
-# backend/Dockerfile 末尾を変更
-CMD ["sh", "-c", "python -m app.init_data || true && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+# Health check for Container Apps
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:8000/docs')" || exit 1
+
+# Environment variables
+ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
+
+# Expose port (Container Apps will override this)
+EXPOSE 8000
+
+# Start command - initialize data then run server
+CMD ["sh", "-c", "python -m app.init_data || true && uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 1"]
